syntax = "proto3";
import "proto/sales.proto";
package coresamples_service;

option go_package = "./proto;coresamples_service";

service InternalUserService{

  rpc CreateInternalUser(CreateInternalUserRequest) returns (InternalUser){}
  rpc GetSalesClinics (ListSalesNameRequest) returns (ListCustomerPracticeResponse){};
  rpc GetInternalUser (GetInternalUserRequest) returns (GetInternalUserResponse){}
  rpc TransferSalesCustomer(TransferSalesCustomerRequest) returns (TransferSalesCustomerResponse){}
  rpc GetLowerLevelInternalUsers(GetLowerLevelInternalUsersRequest) returns (GetLowerLevelInternalUsersResponse){}
  rpc SetLowerLevelInternalUsers(SetLowerLevelInternalUsersRequest) returns (SetLowerLevelInternalUsersResponse){}
  rpc CreateSampleNavigatorNote(CreateSampleNavigatorNoteRequest) returns (CreateSampleNavigatorNoteResponse){}
  rpc ModifySampleNavigatorNote(ModifySampleNavigatorNoteRequest) returns (ModifySampleNavigatorNoteResponse){}
  rpc DeleteSampleNavigatorNote(DeleteSampleNavigatorNoteRequest) returns (DeleteSampleNavigatorNoteResponse){}
  rpc GetInternalUserByid(GetInternalUserByidRequest) returns (GetInternalUserByidResponse){}
  rpc CheckCustomerNavigator(CheckNavigatorCustomerRequest) returns(CheckNavigatorCustomerResponse){}
}

message CheckNavigatorCustomerRequest{
  string customer_id = 1;
  string navigator_internal_user_id = 2;
}

message CheckNavigatorCustomerResponse{
  string access = 1;
}

message GetInternalUserByidRequest{
  string internal_user_id = 1;
}
message GetInternalUserByidResponse{
  int32 internal_user_id = 1;
  string internal_user_role = 2;
  string internal_user_name = 3;
  string internal_user_firstname = 4;
  string internal_user_lastname = 5;
  string internal_user_middlename = 6;
  string internal_user_email = 7;
  string internal_user_phone = 8;
  int32  internal_user_role_id = 9;
}


message DeleteSampleNavigatorNoteRequest{
  int32 navigator_note_id = 1;
}

message DeleteSampleNavigatorNoteResponse{
  int32 navigator_note_id = 1;
}

message ModifySampleNavigatorNoteRequest{
  int32 navigator_note_id = 1;
  string note = 2;
  string modified_by = 3;
  string navigator_note_read_status = 4;
  string navigator_note_color = 5;
  string navigator_note_type = 6;
  string navigator_note_icon = 7;
}

message ModifySampleNavigatorNoteResponse{
  int32 navigator_note_id = 1;
  string note = 2;
  int32 sample_id = 3;
  int32 created_by_internal_user_id = 4;
  string created_time = 5;
  string navigator_note_read_status = 6;
  string modified_by = 7;
  string modified_time = 8;
  string navigator_note_color = 9;
  string navigator_note_type = 10;
  string navigator_note_icon = 11;
  bool is_active = 12;


}

message CreateSampleNavigatorNoteRequest{
  string note = 1;
  int32 sample_id = 2;
  int32 created_by_internal_user_id = 3;
  string modified_by = 4;
}

message CreateSampleNavigatorNoteResponse{
  int32 navigator_note_id = 1;
  string note = 2;
  int32 sample_id = 3;
  int32 created_by_internal_user_id = 4;
  string created_time = 5;
  string navigator_note_read_status = 6;
  string modified_by = 7;
  string modified_time = 8;
  string navigator_note_color = 9;
  string navigator_note_type = 10;
  string navigator_note_icon = 11;
  bool is_active = 12;
}

message SetLowerLevelInternalUsersRequest{
  string internal_user_role = 1;
  string upper_internal_user_id = 2;
  string lower_internal_user_id = 3;
}

message SetLowerLevelInternalUsersResponse{
  int32 internal_user_id = 1;
  string internal_user_role = 2;
  string internal_user_name = 3;
  string internal_user_firstname = 4;
  string internal_user_lastname = 5;
  string internal_user_middlename = 6;
  int32 internal_user_role_id = 7;
  string internal_user_type = 8;
  string internal_user_type_id = 9;
  bool internal_user_is_full_time = 10;
  int32 internal_user_region = 11;
  string internal_user_email = 12;
  string internal_user_phone = 13;
  bool isActive = 14;
  int32 user_id = 15;
}

message GetLowerLevelInternalUsersRequest{
  string internal_user_role = 1;
  int32 internal_user_role_id = 2;
}

message GetLowerLevelInternalUsersResponse{
  int32 internal_user_id = 1;
  string internal_user_role = 2;
  string internal_user_name = 3;
  string internal_user_firstname = 4;
  string internal_user_lastname = 5;
  string internal_user_middlename = 6;
  int32 internal_user_role_id = 7;
  string internal_user_type = 8;
  string internal_user_type_id = 9;
  bool internal_user_is_full_name = 10;
  int32 internal_user_region = 11;
  string internal_user_email = 12;
  string internal_user_phone = 13;
  bool isActive = 14;
  int32 user_id = 15;
  repeated GetLowerLevelInternalUsersResponse lower_level_internal_users = 16;
}


message TransferSalesCustomerRequest{
  string from_sales_id = 1;
  string to_sales_id = 2;
  string customer_id = 3;
}

message TransferSalesCustomerResponse{
  string status = 1;
}

message GetInternalUserRequest{
  string role = 1;
  repeated int32 role_ids = 2;
  repeated string usernames = 3;
}

message GetInternalUserResponse{
  repeated GetInternalUserResponseMiddleLevel response = 1;
}

message GetInternalUserResponseMiddleLevel{
  repeated InternalUser internal_user = 1;
}

message CreateInternalUserRequest{

  string internal_user_role = 2;
  string internal_user_name = 3;
  string internal_user_firstname = 4;
  string internal_user_lastname = 5;
  string internal_user_middlename = 6;
  string internal_user_type = 8;
  string internal_user_type_id = 9;
  bool internal_user_is_full_time = 10;
  int32 internal_user_region = 11;
  string internal_user_email = 12;
  string internal_user_phone = 13;
}

message InternalUser{
  int32 internal_user_id = 1;
  string internal_user_role = 2;
  string internal_user_name = 3;
  string internal_user_firstname = 4;
  string internal_user_lastname = 5;
  string internal_user_middlename = 6;
  int32 internal_user_role_id = 7;
  string internal_user_type = 8;
  string internal_user_type_id = 9;
  bool internal_user_is_full_time = 10;
  int32 internal_user_region = 11;
  string internal_user_email = 12;
  string internal_user_phone = 13;
  bool isActive = 14;
  int32 user_id = 15;
}

message ListSalesInfoRequest{
  string internal_user_role_id = 1;
  string internal_user_name = 2;
}

message internalSales{
  int32 internal_user_id = 1;
  string internal_user_role = 2;
  string internal_user_name = 3;
  string internal_user_firstname = 4;
  string internal_user_lastname = 5;
  string internal_user_middlename = 6;
  int32 internal_user_role_id = 7;
  string internal_user_type = 8;
  string internal_user_type_id = 9;
  bool internal_user_is_full_time = 10;
  int32 internal_user_region = 11;
  string internal_user_email = 12;
  string internal_user_phone = 13;
  bool isActive = 14;
  int32 user_id = 15;
}

message ListInternalSalesResponse{
  repeated internalSales Sales = 1;
}
message ListSalesNameRequest{
  string role = 1;
  repeated string internal_user_names = 2;
  string page = 3;
  string perPage = 4;
}
